<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	
	    <TextView android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/userAndRole" 
	            android:gravity="center_horizontal"
	            android:textSize="20sp"
	            android:textStyle="bold" 
	            />
        <View  
		   android:layout_width="fill_parent"  
		    android:layout_height="3px" 
		   android:background="?android:attr/listDivider"  
		/>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="800px"
            android:orientation="vertical"
            android:layout_margin="20px">
	        <com.zhb.demo.viewGroup.MyViewGroup 
		    android:id="@+id/myviewgroup"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content">
		    
		    <Button
	            android:id="@+id/userAndRole_login"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/userAndRole_login" 
	            android:layout_marginRight="15dp" />
	
	         <Button
	            android:id="@+id/userAndRole_logout"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/userAndRole_logout" 
	            android:layout_marginRight="15dp" />
	        <Button
	            android:id="@+id/userAndRole_exit"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/userAndRole_exit" 
	            android:layout_marginRight="15dp" />
	        <Button
	            android:id="@+id/userAndRole_onEnterGame"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/userAndRole_onEnterGame" 
	            android:layout_marginRight="15dp" />
	        <Button
	            android:id="@+id/userAndRole_onCreateRole"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/userAndRole_onCreateRole" 
	            android:layout_marginRight="15dp" />
	        <Button
	            android:id="@+id/userAndRole_onRoleLevelup"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/userAndRole_onRoleLevelup" 
	             />	    	    	    
		</com.zhb.demo.viewGroup.MyViewGroup>
	        </LinearLayout>
		
	
		<TextView android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/pay" 
	            android:gravity="center_horizontal"
	            android:textSize="20sp"
	            android:textStyle="bold"
	            />
	        <View  
			   android:layout_width="fill_parent"  
			    android:layout_height="3px" 
			   android:background="?android:attr/listDivider"  
			/>  
			<LinearLayout 
	            android:layout_width="fill_parent"
	            android:layout_height="300px"
	            android:orientation="vertical"
	            android:layout_margin="20px">
	        <com.zhb.demo.viewGroup.MyViewGroup 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            <Button
	            android:id="@+id/pay_pay"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/pay_pay"
	            android:layout_marginRight="30dp" />
	
	        </com.zhb.demo.viewGroup.MyViewGroup>
	       </LinearLayout>
	</LinearLayout>
</ScrollView>